[package]
name = "game-metrics"
version = "0.0.4"
repository = "https://github.com/jaynus/game-metrics"
description = "A simple crate for effective metrics instrumentation targeted at games."
documentation = "https://docs.rs/game-metrics"
authors = ["Walter Pearce <jaynus@gmail.com>"]
edition = "2018"
license = "MIT"


[dependencies]
#game-metrics-macro = { path = "../game-metrics-macro" }
game-metrics-macro = "0.0.4"

lazy_static = "1.4"
crossbeam-channel = "0.4"
hdrhistogram = "7.0"
parking_lot = "0.10"
fxhash = "0.2"
quanta = "0.3"

[features]
default = []
disable = []